choose-mirror (0.021) UNRELEASED; urgency=low

  * Kęstutis Biliūnas
    - Update Lithuanian translation.
  * Tommi Vainikainen
    - Update Finnish (fi.po) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Sebastian Ley
    - Fix manual mirror entry  (Closes: #219503)
  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Denis Barbier
    - Sort country names according to current language.

 -- Sebastian Ley <ley@debian.org>  Fri,  7 Nov 2003 11:38:15 +0100

choose-mirror (0.020) unstable; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
    - Actually, unfuzzy one template translation.
  * Bart cornelis
    - update dutch translation (nl.po)
  * Pierre Machard
    - Update French translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Joey Hess
    - Change priority to extra; this package should not be pulled in
      to CD installs and the like.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 22:02:36 -0500

choose-mirror (0.019) unstable; urgency=low

  * Alastair McKinstry
    - Support backup capabilities.
    - Make country names translatable. Closes: #215208.
    - Set default country question priority to "medium", picking a default
      from debian-installer/language (eg. languagechooser).
    - Polish the template language. Closes: #217775.
    - Place the custom mirror choice at the top of the list, not the end;
      Closes: #212456.
    - Change "protocol" question from high to medium, default http.
    - Put choose-mirror.templates, Mirrors.masterlist in tarball to aid
      translators.
  * Christian Perrier
    - Update French translation.
  * Bart Cornelis
    - updated Dutch translation (nl.po)
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * André Luís Lopes
    - Update Brazilian Portuguese (pt_BR) translation.
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po).